# chess-engine

./: .gitignore  CMakeLists.txt  README.md
Core/: CMakeLists.txt
Core.Test/: CMakeLists.txt  main.cpp
Core/include/: Game.hpp  Move.hpp
Core/include/Chess/: Bitboard.hpp  ChessGame.hpp  ChessMove.hpp  ChessState.hpp
Core/src/: Point.cpp
Core/src/Chess/: Bitboard.cpp  ChessGame.cpp  ChessMove.cpp  ChessState.cpp
Moddels/: CMakeLists.txt
engine-core/: CMakeLists.txt
engine-core/include/: color.hpp  game.hpp  point.hpp  state.hpp
engine-core/include/chess-bitboard/: chess_game.hpp  chess_move.hpp  chess_state.hpp  pieces.hpp
engine-core/src/: point.cpp
engine-core/src/chess-bitboard/: bitboard.cpp  chess_game.cpp  chess_move.cpp  chess_state.cpp
models/: CMakeLists.txt
unit-test/: CMakeLists.txt  main.cpp
